--- a/frontend/src/components/Post/Post.module.scss
+++ b/frontend/src/components/Post/Post.module.scss
@@ -1,39 +1,63 @@
 .root {
-  box-sizing: border-box;
-  border-radius: 8px;
   margin-bottom: 30px;
   overflow: hidden;
   transition: border 0.1s ease-in-out;
-  border: 2px solid transparent;
-  p {
-    font-weight: 600;
-  }
+
   span {
     color: rgb(133, 133, 133);
     font-size: 12px;
   }
   &:hover {
-    border: 2px solid rgba(0, 63, 179, 0.616);
+    border: 1px solid hsl(var(--secondary-foreground));
     .edit {
-      opacity: 1;
+      opacity: 0.9;
       visibility: visible;
     }
   }
 }
+p.name {
+  font-weight: 600;
+}
 .edit {
-  background-color: rgba(255, 255, 255, 0.603);
+  // background-color: rgba(255, 255, 255, 0.603);
+  svg {
+    stroke: hsl(var(--secondary-foreground));
+  }
   transition: all 0.4s ease-in-out;
   opacity: 0;
   visibility: hidden;
 }
-.banner {
-  min-height: 200px;
-  background-color: rgb(207, 207, 207);
-  width: 100%;
-  margin: auto;
+.markdown {
+  h1 {
+    font-size: 40px;
+  }
+  h2 {
+    font-size: 30px;
+    font-weight: 500;
+  }
+  h3 {
+    font-size: 20px;
+  }
+  p {
+    font-size: 20px;
 
+    margin-bottom: 10px;
+    text-align: justify;
+  }
+}
+.banner {
+  width: 100%;
+  overflow: hidden;
+  max-height: 300px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &.full {
+    display: block;
+    max-height: unset;
+  }
   img {
     width: 100%;
-    height: 100%;
   }
 }
