--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 @layer base {
   :root {
+    --header: 0 0% 100%;
+     /* custom vars */
+
     --background: 0 0% 95%;
     --foreground: 0 0% 3.9%;
     --card: 0 0% 100%;
@@ -30,7 +33,11 @@
     --radius: 0.5rem
   }
   .dark {
-    --background: 0 0% 3.9%;
+
+    --header: 0 0% 0%;
+    /* custom vars */
+
+    --background: 0 0% 5%;
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
