--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -78,12 +78,13 @@
  .container-main{
   padding: 0 10px ;
   max-width: 1200px;
-  margin: auto;
+  margin: 0 auto;
   width: 100%;
  }
 
  #root{
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
+ 
  }
